Fixed visible scrollbar on small screens when padding is used on the container

--- a/view/frontend/web/css/slick-magento.less
+++ b/view/frontend/web/css/slick-magento.less
@@ -14,6 +14,12 @@
     color: #aaa;
 }
 
+.slick-dots {
+    box-sizing: border-box;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .slick-reset-button() {
     box-shadow: none !important;
     border: none !important;
